# scoreboard-rs

./: CONTRIBUTING.md  Cargo.toml  GENERATIVE-AI-POLICY.md  LICENSES  README.md  log4rs.yaml  release.json
.github/workflows/: rust.yml
src/: error.rs  lib.rs  logging.rs  main.rs  path_trie.rs  static_files.rs  ws.rs
src/event/: event_provider.rs  listener.rs  mod.rs
src/model/: commands.rs  consts.rs  mod.rs  parser.rs
src/state/: listener.rs  manager.rs  mod.rs  path_trie.rs  snapshotter.rs  state_trie.rs
src/state/trie/: state.rs
src/trie/: state.rs
src/util/: mod.rs  scoreboard_clock.rs  value_with_id.rs
static/html/: index.html  jsconfig.json
static/html/components/igrf-tab/: index.css  index.html
static/html/components/lt-sheet/: index.html
static/html/components/or-sheet/: index.html  index.js
static/html/components/penalty-list/: index.css  index.html  index.js
static/html/components/plt-input/: index.css  index.html  index.js
static/html/components/roster-tab/: index.html
static/html/components/sbo-input/: index.css  index.html  index.js
static/html/components/settings-tab/: index.html
static/html/components/sk-input/: index.css  index.html
static/html/components/sk-sheet/: index.css  index.html  index.js
static/html/components/team-editor/: index.html  index.js
static/html/documentation/: wiki-snapshot.html
static/html/javascript/: boolconversions.js  conversions.js  utils.js  windowfunctions.js
static/html/json/: WS.js  core.js
static/html/styles/: common.css  fonts.css
static/html/themes/: liberation.css
(+34 files in other folders)
